# batsched4

./: .clang-format  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  bash_completion.sh  default.nix  meson.build  meson.build.orig  release.nix
ci/: README.md  analyze-coverage.bash  batsim-pinned.json  build.bash  default.nix  local.nix  pin-batsim.bash  run-tests.bash  test-deps.nix  test-env.nix  update-batsched_dev-cache.bash  update-dependencies-cache.bash
cmake/Modules/: Findloguru.cmake
src/: batsched_to_strings.hpp  batsched_tools.cpp  batsched_tools.hpp  data_storage.cpp  data_storage.hpp  decision.cpp  decision.cpp.orig  decision.hpp  decision.hpp.orig  isalgorithm.cpp  isalgorithm.hpp  isalgorithm.hpp.orig  json_workload.cpp  json_workload.hpp  locality.cpp  locality.hpp  machine.cpp  machine.hpp  machine_range.cpp  machine_range.hpp  main.cpp  main.cpp.orig  network.cpp  network.hpp  pempek_assert.cpp  pempek_assert.hpp  protocol.cpp  protocol.cpp.orig  protocol.hpp  protocol.hpp.orig  queue.cpp  queue.hpp  queueing_theory_waiting_time_estimator.cpp  queueing_theory_waiting_time_estimator.hpp  schedule.cpp  schedule.cpp.orig  schedule.hpp  schedule.hpp.orig
src/algo/: conservative_bf.cpp  conservative_bf.cpp.orig  conservative_bf.hpp  conservative_bf.hpp.orig  conservative_bf_metrics.cpp  conservative_bf_metrics.hpp  conservative_bf_metrics_roci.cpp  conservative_bf_metrics_roci.hpp  crasher.cpp  crasher.hpp  easy_bf.cpp  easy_bf.hpp  easy_bf2.cpp  easy_bf2.hpp  easy_bf2_old.cpp  easy_bf2_old.hpp  easy_bf3.cpp  easy_bf3.hpp  easy_bf_fast.cpp  easy_bf_fast.hpp  easy_bf_fast2.cpp  easy_bf_fast2.hpp  easy_bf_fast2_holdback.cpp  easy_bf_fast2_holdback.hpp  easy_bf_plot_liquid_load_horizon.cpp  easy_bf_plot_liquid_load_horizon.hpp  energy_bf.cpp  energy_bf.hpp  energy_bf_dicho.cpp  energy_bf_dicho.hpp  energy_bf_idle_sleeper.cpp  energy_bf_idle_sleeper.hpp  energy_bf_machine_subpart_sleeper.cpp  energy_bf_machine_subpart_sleeper.hpp  energy_bf_monitoring_inertial_shutdown.cpp  energy_bf_monitoring_inertial_shutdown.hpp  energy_bf_monitoring_period.cpp  energy_bf_monitoring_period.hpp  energy_watcher.cpp  energy_watcher.hpp  (+24 more)
test/: Makefile  README.md  conftest.py  fast_tests.yaml  helper.py  kth_tests.yaml  no_redis.yaml  robin_helper.py  submit.yaml  test_energy.py  test_runner.py
test/instances/: easy-mixed.yaml  filler-mixed.yaml
test/workloads/: hello.json  kth_sp2.json  mixed.json
